--- a/index.html
+++ b/index.html
@@ -20,13 +20,167 @@
                     </ul>
                 </div>
             </section>
+            <section>   
+                <div>   
+                    <h1>Get body in <span>shape</span> & stay healthy</h1>
+                    <p>A huge selection .......</p>
+                    <button>Join Club Now!</button>
+                    <button>Download App</button>
+                </div>
+                <div>   
+                    <img src="/images/Images 2.png" alt="man with dumble">
+                    <div class="tr-card">   
+                        <h3>500+</h3>
+                        <p>Free workout videos</p>
+                    </div>
+                    <div class="tr-card">   
+                        <!-- to do: add orange circle -->
+                        <h4>350+</h4>
+                        <p>Video tutorial</p>
+                    </div>
+                </div>
+            </section>
         </nav>
     </header>
     <main> 
+        <section>   
+            <div>   
+                <h2>Change Your Habits</h2>
+                <p>We believe fitness......</p>
+            </div>
+            <div>   
+                <div>
+                    <img src="/images/image 3.png" alt="man doing pushup" class="round-image">
+                    <h5>Movement</h5>
+                    <p>We believe in fitnes......</p>
+                </div>
+                <div>
+                    <img src="images/image 2.png" alt="hand over head" class="round-image">
+                    <h5>Time</h5>
+                    <p>We believe fitness ...</p>
+                </div>
+                <div>
+                    <img src="images/image 4.png" alt="man with dumble" class="round-image">
+                    <h5>Practice</h5>
+                    <p>We believe fitness....</p>
+                </div>
+                <div>
+                    <img src="images/image 5.png" alt="fit man" class="round-image">
+                    <h5>Weight Loss</h5>
+                    <p>We believe fitness</p>
+                </div>
+            </div>
+        </section>
+        <section>   
+            <div>   
+                <h2>Run an Extra Mile Easily</h2>
+                <p>We believe fitness .....</p>
+                <button>Join Now</button>
+            </div>
+            <img src="images/run.jpg" alt="man running">
+        </section>
+        <section>   
+            <h1>BMI Calculator</h1>
+            <p>We believe fitness......</p>
+            <div>   
+                <div>   
+                    <h3>BMI Calculator Chart</h3>
+                    <table> 
+                        <tr>    
+                            <td>BMI</td>
+                            <td>Weight Status</td>
+                        </tr>
+                        <tr>    
+                            <td>Below 18.5</td>
+                            <td>Underweight</td>
+                        </tr>
+                        <tr>    
+                            <td>18.5-24.9</td>
+                            <td>Healthy</td>
+                        </tr>
+                        <tr>    
+                            <td>25.0-29.9</td>
+                            <td>Overweight</td>
+                        </tr>
+                        <tr>    
+                            <td>30.0-and Above</td>
+                            <td>Obese</td>
+                        </tr>
+                    </table>
+                </div>
+                <div>   
+                    <h3>Calculate your BMI</h3>
+                    <p>We believe fitness....</p>
+                    <!-- To do: Input and selection in grid -->
+                     <button>Calculate</button>
+                </div>
+            </div>
+        </section>
+        <section>   
+            <h1>Meet Our Team</h1>
+            <p>We believe fitness...</p>
+            <div class="team">   
+                
+            </div>
+        </section>
+        <section>   
+            <div>   
+                <h1>Meet Our Team</h1>
+                <p>We believe fitness...</p>
+            </div>
+            <div>   
+                <div class="team-member">
+                    <h4>Jerome Bell</h4>
+                    <p>Trainer</p>
+                </div>
+                <div class="team-member">
+                    <h4>Cameron Williamson</h4>
+                    <p>Trainer</p>
+                </div>
+                <div class="team-member">
+                    <h4>Darrel Steward</h4>
+                    <p>Trainer</p>
+                </div>
+                <div class="team-member">
+                    <h4>Dianne Russell</h4>
+                    <p>Trainer</p>
+                </div>
+                <div class="team-member">
+                    <h4>Cody Fisher</h4>
+                    <p>Trainer</p>
+                </div>
+                <div class="team-member">
+                    <h4>Theresa Webb</h4>
+                    <p>Trainer</p>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer> 
-
+        <section>   
+            <div> 
+                <p>Fitness</p>
+                <p>We believe fitness.........</p>
+            </div>
+            <div>   
+                <h2>Get Started</h2>
+                <p class="footer">Service</p>
+                <p class="footer">Contact Us</p>
+                <p class="footer">Affiliate Program</p>
+                <p class="footer">About Us</p>
+            </div>
+            <div>   
+                <h2>Get Started</h2>
+                <p class="footer">Fitness</p>
+                <p class="footer">Platform</p>
+                <p class="footer">Workout Library</p>
+                <p class="footer">App Design</p>
+            </div>
+        </section>
+        <section>   
+            <p class="copyright">All right reserved @Fitness 2024</p>
+        </section>
     </footer>
 </body>
 </html>
