--- a/index.html
+++ b/index.html
@@ -1,54 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Center</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet">
+                
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header> 
-        <nav>   
-            <section class="nav">   
-                <p>Fitness</p>
-                <div class="menu">   
-                    <ul>    
-                        <li>Home</li>
+
+<body class="inter body">
+    <header class="header">
+        <nav>
+            <section class="nav">
+                <p class="title">Fitness</p>
+                <div class="menu">
+                    <ul>
+                        <li class="home">Home</li>
                         <li>Service</li>
                         <li>Contact</li>
                         <li>About</li>
                     </ul>
                 </div>
             </section>
-            <section>   
-                <div>   
-                    <h1>Get body in <span>shape</span> & stay healthy</h1>
-                    <p>A huge selection .......</p>
-                    <button>Join Club Now!</button>
-                    <button>Download App</button>
+            <section class="hero">
+                <div class="body-in-shape">
+                    <p class="shape">Get body in <span class="miama">shape</span> & stay healthy</p>
+                    <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                    <button class="orange-btn">Join Club Now!</button>
+                    <button class="black-btn">Download App</button>
                 </div>
-                <div>   
+                <div class="tr-cards">
                     <img src="/images/Images 2.png" alt="man with dumble">
-                    <div class="tr-card">   
+                    <div class="tr-card1">
                         <h3>500+</h3>
                         <p>Free workout videos</p>
                     </div>
-                    <div class="tr-card">   
-                        <!-- to do: add orange circle -->
-                        <h4>350+</h4>
-                        <p>Video tutorial</p>
+                    <div class="tr-card2">
+                        <div class="round-orange"></div>                        
+                        <div>   
+                            <h4>350+</h4>
+                            <p>Video tutorial</p>
+                        </div>
                     </div>
                 </div>
             </section>
         </nav>
     </header>
-    <main> 
-        <section>   
-            <div>   
+    <main>
+        <section>
+            <div>
                 <h2>Change Your Habits</h2>
                 <p>We believe fitness......</p>
             </div>
-            <div>   
+            <div>
                 <div>
                     <img src="/images/image 3.png" alt="man doing pushup" class="round-image">
                     <h5>Movement</h5>
@@ -71,64 +82,64 @@
                 </div>
             </div>
         </section>
-        <section>   
-            <div>   
+        <section>
+            <div>
                 <h2>Run an Extra Mile Easily</h2>
                 <p>We believe fitness .....</p>
                 <button>Join Now</button>
             </div>
             <img src="images/run.jpg" alt="man running">
         </section>
-        <section>   
+        <section>
             <h1>BMI Calculator</h1>
             <p>We believe fitness......</p>
-            <div>   
-                <div>   
+            <div>
+                <div>
                     <h3>BMI Calculator Chart</h3>
-                    <table> 
-                        <tr>    
+                    <table>
+                        <tr>
                             <td>BMI</td>
                             <td>Weight Status</td>
                         </tr>
-                        <tr>    
+                        <tr>
                             <td>Below 18.5</td>
                             <td>Underweight</td>
                         </tr>
-                        <tr>    
+                        <tr>
                             <td>18.5-24.9</td>
                             <td>Healthy</td>
                         </tr>
-                        <tr>    
+                        <tr>
                             <td>25.0-29.9</td>
                             <td>Overweight</td>
                         </tr>
-                        <tr>    
+                        <tr>
                             <td>30.0-and Above</td>
                             <td>Obese</td>
                         </tr>
                     </table>
                 </div>
-                <div>   
+                <div>
                     <h3>Calculate your BMI</h3>
                     <p>We believe fitness....</p>
                     <!-- To do: Input and selection in grid -->
-                     <button>Calculate</button>
+                    <button>Calculate</button>
                 </div>
             </div>
         </section>
-        <section>   
+        <section>
             <h1>Meet Our Team</h1>
             <p>We believe fitness...</p>
-            <div class="team">   
-                
+            <div class="team">
+
             </div>
         </section>
-        <section>   
-            <div>   
+        <section>
+            <div>
                 <h1>Meet Our Team</h1>
                 <p>We believe fitness...</p>
             </div>
-            <div>   
+            <div>
                 <div class="team-member">
                     <h4>Jerome Bell</h4>
                     <p>Trainer</p>
@@ -157,20 +168,20 @@
         </section>
 
     </main>
-    <footer> 
-        <section>   
-            <div> 
+    <footer>
+        <section>
+            <div>
                 <p>Fitness</p>
                 <p>We believe fitness.........</p>
             </div>
-            <div>   
+            <div>
                 <h2>Get Started</h2>
                 <p class="footer">Service</p>
                 <p class="footer">Contact Us</p>
                 <p class="footer">Affiliate Program</p>
                 <p class="footer">About Us</p>
             </div>
-            <div>   
+            <div>
                 <h2>Get Started</h2>
                 <p class="footer">Fitness</p>
                 <p class="footer">Platform</p>
@@ -178,9 +189,10 @@
                 <p class="footer">App Design</p>
             </div>
         </section>
-        <section>   
+        <section>
             <p class="copyright">All right reserved @Fitness 2024</p>
         </section>
     </footer>
 </body>
+
 </html>
