--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="section2">
             <div>
                 <h2>Change Your Habits</h2>
                 <p>We believe fitness......</p>
             </div>
-            <div>
+            <div class="section2-cards">
                 <div>
                     <img src="/images/image 3.png" alt="man doing pushup" class="round-image">
                     <h5>Movement</h5>
@@ -82,11 +82,11 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="section3">
             <div>
                 <h2>Run an Extra Mile Easily</h2>
                 <p>We believe fitness .....</p>
-                <button>Join Now</button>
+                <button class="orange-btn">Join Now</button>
             </div>
             <img src="images/run.jpg" alt="man running">
         </section>
@@ -168,10 +168,10 @@
         </section>
 
     </main>
-    <footer>
-        <section>
+    <footer class="full-footer">
+        <section class="footer-divide">
             <div>
-                <p>Fitness</p>
+                <p class="ftr-logo">Fitness</p>
                 <p>We believe fitness.........</p>
             </div>
             <div>
