--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button class="orange-btn">Join Club Now!</button>
                     <button class="black-btn">Download App</button>
                 </div>
-                <div class="tr-cards">
+                <div>
                     <img src="/images/Images 2.png" alt="man with dumble">
                     <div class="tr-card1">
                         <h3>500+</h3>
@@ -91,9 +91,11 @@
             <img src="images/run.jpg" alt="man running">
         </section>
         <section>
-            <h1>BMI Calculator</h1>
-            <p>We believe fitness......</p>
-            <div>
+            <div>   
+                <h1>BMI Calculator</h1>
+                <p>We believe fitness......</p>
+            </div>
+            <div class="bmi">
                 <div>
                     <h3>BMI Calculator Chart</h3>
                     <table>
