--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <button class="black-btn">Download App</button>
                 </div>
                 <div>
-                    <img src="/images/Images 2.png" alt="man with dumble">
+                    <img src="/images/images-2.png" alt="man with dumble">
                     <div class="tr-card1">
                         <h3>500+</h3>
                         <p>Free workout videos</p>
