--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <button class="black-btn">Download App</button>
                 </div>
                 <div>
-                    <img src="/images/images-2.png" alt="man with dumble">
+                    <img src="images/images-2.png" alt="man with dumble">
                     <div class="tr-card1">
                         <h3>500+</h3>
                         <p>Free workout videos</p>
@@ -61,7 +61,7 @@
             </div>
             <div class="section2-cards">
                 <div>
-                    <img src="/images/image 3.png" alt="man doing pushup" class="round-image">
+                    <img src="images/image 3.png" alt="man doing pushup" class="round-image">
                     <h5>Movement</h5>
                     <p>We believe in fitnes......</p>
                 </div>
@@ -91,7 +91,7 @@
             <img src="images/run.jpg" alt="man running">
         </section>
         <section>
-            <div>   
+            <div class="bmi-heading">   
                 <h1>BMI Calculator</h1>
                 <p>We believe fitness......</p>
             </div>
