--- a/index.html
+++ b/index.html
@@ -124,47 +124,78 @@
                 <div>
                     <h3>Calculate your BMI</h3>
                     <p>We believe fitness....</p>
-                    <!-- To do: Input and selection in grid -->
-                    <button>Calculate</button>
+                    <div class="form">   
+                        <input type="text" placeholder="Height/cm">
+                        <input type="text" placeholder="weight/kg">
+                        <input type="text" placeholder="Age">
+                        <select id="sex" name="sex">
+                            <option value="sex">Sex</option>
+                          </select>
+                          <select id="activity" name="activity">
+                            <option value="activity">Select an activity factor</option>
+                          </select>
+                    </div>
+                    <button class="orange-btn">Calculate</button>
                 </div>
             </div>
         </section>
-        <section>
-            <h1>Meet Our Team</h1>
-            <p>We believe fitness...</p>
-            <div class="team">
 
-            </div>
-        </section>
         <section>
             <div>
                 <h1>Meet Our Team</h1>
                 <p>We believe fitness...</p>
             </div>
-            <div>
-                <div class="team-member">
-                    <h4>Jerome Bell</h4>
-                    <p>Trainer</p>
+            <div class="grid">
+                <div class="team-member1">
+                    <div class="bottom-left">   
+                        <h4>Jerome Bell</h4>
+                        <p>Trainer</p>
+                    </div>
                 </div>
-                <div class="team-member">
+                <div class="team-member2">
+                    <div class="bottom-left">   
                     <h4>Cameron Williamson</h4>
                     <p>Trainer</p>
+                    </div>
+
                 </div>
-                <div class="team-member">
+                <div class="team-member3">
+                    <div class="bottom-left">   
                     <h4>Darrel Steward</h4>
                     <p>Trainer</p>
+                    </div>
+
                 </div>
-                <div class="team-member">
+                <div class="team-member4">
+                    <div class="bottom-left">   
                     <h4>Dianne Russell</h4>
                     <p>Trainer</p>
+                    </div>
+
                 </div>
-                <div class="team-member">
+                <div class="team-member5">
+                    <div class="bottom-left">   
                     <h4>Cody Fisher</h4>
                     <p>Trainer</p>
+                    </div>
+
                 </div>
-                <div class="team-member">
+                <div class="team-member6">
+                    <div class="bottom-left">   
                     <h4>Theresa Webb</h4>
                     <p>Trainer</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <section>   
+            <div>   
+                <p class="big-text"> 
+                    Check our supplements
+                </p>
+                <div>   
+                    <img src="images/s1.png" alt="" class="supp"><button class="orange-btn">Buy Now</button><img src="images/s2.png" alt="" class="supp"><button class="orange-btn">Buy Now</button><img src="images/s3.jpg" alt="" class="supp"><button class="orange-btn">Buy Now</button>
                 </div>
             </div>
         </section>
