--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <section class="hero">
                 <div class="body-in-shape">
                     <p class="shape">Get body in <span class="miama">shape</span> & stay healthy</p>
-                    <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                    <p class="small-description">Unleash Your Potential. Transform Your Body. Join Us Today!</p>
                     <button class="orange-btn">Join Club Now!</button>
                     <button class="black-btn">Download App</button>
                 </div>
@@ -56,44 +56,44 @@
     <main>
         <section class="section2">
             <div>
-                <h2>Change Your Habits</h2>
-                <p>We believe fitness......</p>
+                <p class="big-text">Change Your Habits</p>
+                <p class="small-description">Break Old Habits, Build a Stronger You. It All Starts Here</p>
             </div>
             <div class="section2-cards">
                 <div>
                     <img src="images/image 3.png" alt="man doing pushup" class="round-image">
                     <h5>Movement</h5>
-                    <p>We believe in fitnes......</p>
+                    <p class="small-description">Every Movement Matters. Sculpt Your Body with Precision.</p>
                 </div>
                 <div>
                     <img src="images/image 2.png" alt="hand over head" class="round-image">
                     <h5>Time</h5>
-                    <p>We believe fitness ...</p>
+                    <p class="small-description">Your Fitness Journey Begins Now. Time to Invest in Yourself.</p>
                 </div>
                 <div>
                     <img src="images/image 4.png" alt="man with dumble" class="round-image">
                     <h5>Practice</h5>
-                    <p>We believe fitness....</p>
+                    <p class="small-description">Consistency is Key. Practice Makes Perfect. We're Here to Guide You.</p>
                 </div>
                 <div>
                     <img src="images/image 5.png" alt="fit man" class="round-image">
                     <h5>Weight Loss</h5>
-                    <p>We believe fitness</p>
+                    <p class="small-description">Your Weight Loss Journey Starts Here. Achieve the Body You've Always Wanted.</p>
                 </div>
             </div>
         </section>
         <section class="section3">
             <div>
-                <h2>Run an Extra Mile Easily</h2>
-                <p>We believe fitness .....</p>
+                <p class="big-text">Run an Extra Mile Easily</p>
+                <p class="small-description">Push Beyond Your Limits. Run That Extra Mile with Confidence.</p>
                 <button class="orange-btn">Join Now</button>
             </div>
             <img src="images/run.jpg" alt="man running">
         </section>
         <section>
             <div class="bmi-heading">   
-                <h1>BMI Calculator</h1>
-                <p>We believe fitness......</p>
+                <p class="big-text">BMI Calculator</p>
+                <p class="small-description">Take the First Step: Calculate Your BMI and Unlock Your Fitness Potential.</p>
             </div>
             <div class="bmi">
                 <div>
@@ -123,7 +123,7 @@
                 </div>
                 <div>
                     <h3>Calculate your BMI</h3>
-                    <p>We believe fitness....</p>
+                    <p class="small-description">Know Your Numbers. Calculate Your BMI and Set Your Goals.</p>
                     <div class="form">   
                         <input type="text" placeholder="Height/cm">
                         <input type="text" placeholder="weight/kg">
@@ -142,8 +142,8 @@
 
         <section>
             <div>
-                <h1>Meet Our Team</h1>
-                <p>We believe fitness...</p>
+                <p class="big-text">Meet Our Team</p>
+                <p class="small-description">Meet the Experts Behind Your Fitness Success. Our Team, Your Strength.</p>
             </div>
             <div class="grid">
                 <div class="team-member1">
@@ -194,6 +194,7 @@
                 <p class="big-text"> 
                     Check our supplements
                 </p>
+                <p class="small-description">Fuel Your Workouts with the Best. Discover Our Premium Supplements.</p>
                 <div>   
                     <img src="images/s1.png" alt="" class="supp"><button class="orange-btn">Buy Now</button><img src="images/s2.png" alt="" class="supp"><button class="orange-btn">Buy Now</button><img src="images/s3.jpg" alt="" class="supp"><button class="orange-btn">Buy Now</button>
                 </div>
@@ -205,7 +206,7 @@
         <section class="footer-divide">
             <div>
                 <p class="ftr-logo">Fitness</p>
-                <p>We believe fitness.........</p>
+                <p>Join Our Community and Embrace a Healthier Tomorrow. Fitness for Life, Strength for Living.</p>
             </div>
             <div>
                 <h2>Get Started</h2>
