--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <section class="footer-divide">
             <div>
                 <p class="ftr-logo">Fitness</p>
-                <p>Join Our Community and Embrace a Healthier Tomorrow. Fitness for Life, Strength for Living.</p>
+                <p class="small-description">Join Our Community and Embrace a Healthier Tomorrow. Fitness for Life, Strength for Living.</p>
             </div>
             <div>
                 <h2>Get Started</h2>
