--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="inter body">
     <header class="header">
-        <nav>
+        <nav class="navigation">
             <section class="nav">
                 <p class="title">Fitness</p>
                 <div class="menu">
